examples/bad/in/12-01-definitions-order.see
int x = y;
int y = 15;

void main() {
    return;
}